--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ body {
           just as Danish always slips Kasih’s name & family into his prayers.
           InshaAllah, together we shall build an empire blessed by His grace.<br>
           <p>Barakallahufik.</p>
-          <p>Happy Birthday Kasih Anysa!</p><br>
+          <p>Happy Birthday Kasih Anysa! Carpe Diem!</p><br>
           —Danish Danial
 
 
@@ -303,7 +303,7 @@ body {
       </div>
     </div>
     <div class="heart">
-       <img src="C:\Users\ASUS\Downloads\wax.png" alt="Seal">
+       <img src="wax.png" alt="Seal">
     </div>
   </div>
 </div>
@@ -341,3 +341,4 @@ muteBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
