--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ body {
   <div class="envelope-wrapper">
     <div class="envelope">
       <div class="letter"> <h5 color="gray">[Click here to expand]</h5>
-        <div class="text" style="font-size:30px; font-family: garamond;">
+        <div class="text" style="font-family: garamond;">
           <h4>Dearest Kasih Anysa,</h4>
           Assalamualaikum, Happy Birthday I bid to the one charmful and persistent  🦋<br><br>
           Alhamdulillah for your presence, as I am here to wish and doa for nothing but your successful.<br><br>
@@ -341,4 +341,5 @@ muteBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
 
